# fastapi

./: .cz-config.js  .gitignore  README.md  SingelExe.build.bat  Types.py  app.py  commitlint.config.js  config.ini  config.py  dev.bat  main.py  package.json  pyproject.toml  requirements.txt  test.py  tree.txt  tree.yaml
docs/: description.py
events/: config_check.py  startup.py
middleware/: cors.py  logger.py
routers/: docs.py  static.py  test.py  upload.py  upload_router_template.py
routers/v1/: test.py
src/: Types.py  config.py  main.py  test.py
src/events/: config_check.py  onStartup.py  startup.py
src/middleware/: cors.py  gzip.py  http_time.py  index.py  logger.py  swaggerCache.py
src/routers/: docs.py  router_template.py  static.py  test.py  upload.py
src/test/: async_test.py
src/tools/: schedule.py  test.py  uploader.py
src/utils/: helper.py  ip.py  log.py  logger.py  shell.py
test/: async_test.py
tools/: psd_parser.py  uploader.py
utils/: logger.py
