[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = "个人自用fastapi自用脚手架，集成了一些基础功能"
authors = ["CPS <holy.dandelion@139.com>"]
readme = "README.md"
packages = [{include = "fastapi_template"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
loguru = "^0.6.0"
python-multipart = "^0.0.5"
aiofiles = "^22.1.0"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
email-validator = "^1.3.0"
nuitka = "^2.8.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
# name = "tsinghua"
# url = "https://pypi.tuna.tsinghua.edu.cn/simple/"

name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
